packages/build/tests/error/plugin_load/fixtures/plugin_exit/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit() {
    process.exit(1)
  },
  onBuild() {
    console.log('test')
  },
}
